--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu|Roboto&display=swap" rel="stylesheet">
     <meta
       name="description"
-      content="Personal website"
+      content="New tab"
     />
     <title>Sito web personal</title>
   </head>
