--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,19 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu|Roboto&display=swap" rel="stylesheet">
-    <meta
-      name="description"
-      content="New tab"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Ubuntu|Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <meta name="description" content="New tab" />
     <title>Sito web personal</title>
   </head>
   <body>
